Fix css foo (#37)
* Fix design of blog posts

* Add test

* Update layout foo

* Fix layout issue and proptypes

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -25,7 +25,6 @@ button {
 }
 
 .gatsby-highlight {
-  background-color: $darkBackground;
   border-radius: 0.3em;
   margin: 1em 0;
   overflow: auto;
